Migration to Spring Boot 4.0 step 3: fixed code inspection warnings