@@ -16,7 +16,6 @@ import org.springframework.test.context.jdbc.Sql;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
@@ -59,7 +58,7 @@ public class RepositoryDBProcessDetailActionTests {
 
         List<DBProcessInfo> dbProcessInfoList = StreamSupport
                 .stream(dbProcessInfoRepository.findAll().spliterator(), false)
-                .collect(Collectors.toList());
+                .toList();
         assertThat(dbProcessInfoList.size()).isEqualTo(1L);
 
         DBProcessDetail dbProcessDetail = new DBProcessDetail();
@@ -73,7 +72,7 @@ public class RepositoryDBProcessDetailActionTests {
 
         List<DBProcessDetail> dbProcessDetails = StreamSupport
                 .stream(dbProcessDetailRepository.findAll().spliterator(), false)
-                .collect(Collectors.toList());
+                .toList();
         assertThat(dbProcessDetails.size()).isEqualTo(1L);
 
         DBProcessDetailAction dbProcessDetailAction = new DBProcessDetailAction();
