@@ -15,7 +15,6 @@ import org.springframework.test.context.jdbc.Sql;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
@@ -58,7 +57,7 @@ public class RepositoryDBProcessDetailItemTests {
 
         List<DBProcessInfo> dbProcessInfoList = StreamSupport
                 .stream(dbProcessInfoRepository.findAll().spliterator(), false)
-                .collect(Collectors.toList());
+                .toList();
         assertThat(dbProcessInfoList.size()).isEqualTo(1L);
 
         DBProcessDetail dbProcessDetail = new DBProcessDetail();
@@ -72,7 +71,7 @@ public class RepositoryDBProcessDetailItemTests {
 
         List<DBProcessDetail> dbProcessDetails = StreamSupport
                 .stream(dbProcessDetailRepository.findAll().spliterator(), false)
-                .collect(Collectors.toList());
+                .toList();
         assertThat(dbProcessDetails.size()).isEqualTo(1L);
 
         DBProcessDetailItem dbProcessDetailItem1 = new DBProcessDetailItem();
